# fabric-shell

./: .gitignore  README.md  config.md  config.py  default_config.toml  main.py  matugen-template.scss  pyproject.toml  style.css  style3.css
styles/: _colors.scss  _settings.scss  style.scss
widgets/: bar.py  bar_widgets.py  brightness.py  brightness_slider.py  buttons.py  calendar.py  circular_progress_icon.py  cooldown.py  corner.py  custom_revealer.py  date_time.py  grid.py  interactable_slider.py  keyboard_layout.py  media_controls.py  media_player.py  microphone_slider.py  notification_widget.py  pill.py  popup_window.py  quick_settings.py  revealer.py  rounded_image.py  smooth_scale.py  system_tray.py  toggle_button.py  volume_slider.py
widgets/bar/: battery.py  network_usage.py  resource_monitor.py  screen_recorder.py  tray.py
widgets/helpers/: animator.py  brightness.py  clients.py  dbus_watcher.py  formatted_exec.py  mpris_service.py  network.py  str.py  workspace_properties.py
widgets/helpers/niri/: __init__.py  widgets.py
widgets/pill/: app_launcher.py  applet.py  dashboard.py  date_time.py  music_ticker.py  pill.py  popup_notifications.py  powermenu.py  wallpaper_selector.py
windows/: bar.py  corners.py  dock.py  osd.py  pill.py
