[project]
name = "fabric-shell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabric",
    "platformdirs>=4.3.6",
    "toml>=0.10.2",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }
